# Imitator-waimlap

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/model/: config.toml
config/training/: finetuning_config.toml  info.txt  train_config.toml
scripts/: bench.py  benchchrF.py  lista_singletons.py  make_study.py  settings.py  train.py  train_cv.py  word_metrics.py
src/data_proc/: main.py  pre_calculate.py
src/mslm/benchmark/: BLEU.py
src/mslm/dataloader/: Dataset-Converter.ipynb  EDA-Dataset.ipynb  EDA-Visualizer.ipynb  __init__.py  components.py  data_augmentation.py  keypoint_dataset.py  lista_a_omitir.txt
src/mslm/inference/: __init__.py
src/mslm/models/: __init__.py  imitator.py
src/mslm/models/components/: tranformerLayerRoPE.py
src/mslm/studies/: studies.py
src/mslm/training/: __init__.py  clip_loss.py  cross_val.py  padaware_loss.py  softtoken_loss.py  trainer.py
src/mslm/utils/: early_stopping.py  paths.py  setup_train.py
